--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,22 @@
 @import "tailwindcss";
+
+/* your custom theme extensions */
+@theme {
+  /* custom colors */
+  --color-primary: red;
+  --color-secondary: blue;
+
+ 
+
+
+ 
+  
+}
+
+
+/* Font that use in this Project  */
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap');
